force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/tc9_util__Purchase_Order_Junction__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Junction</label>
    <nameField>
        <displayFormat>POJ-{000000}</displayFormat>
        <label>Purchase Order Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>