force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Allocation_Type__c</fullName>
    <description>Only Pay Transactions with a related Pay Code that has a matching Allocation Type will be assigned to this Purchase Order.</description>
    <inlineHelpText>Only Pay Transactions with a related Pay Code that has a matching Allocation Type will be assigned to this Purchase Order.</inlineHelpText>
    <label>Allocation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_util__PO_Allocation_Types</valueSetName>
    </valueSet>
</CustomField>