force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Assignment__c</fullName>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Purchase Order Junctions</relationshipLabel>
    <relationshipName>Purchase_Order_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>