force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Expiry_Date__c</fullName>
    <description>The expiry date of the related Purchase Order.</description>
    <formula>tc9_util__Purchase_Order__r.tc9_util__Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The expiry date of the related Purchase Order.</inlineHelpText>
    <label>PO Expiry Date</label>
    <type>Date</type>
</CustomField>