force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Junction_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Junction_Effective_Date__c</fullName>
    <label>Junction Effective Date</label>
    <type>Date</type>
</CustomField>