force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Overide_Validation__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Overide_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overide Validation</label>
    <type>Checkbox</type>
</CustomField>