force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_util__Purchase_Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_util__Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Junctions</relationshipLabel>
    <relationshipName>Purchase_Order_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>