force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Remaining_Spend__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Remaining_Spend__c</fullName>
    <description>The remaining spend of the related PO.</description>
    <formula>tc9_util__Purchase_Order__r.tc9_util__Remaining_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The remaining spend of the related PO.</inlineHelpText>
    <label>PO Remaining Spend</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>