force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Sort_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>