force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/fields/tc9_util__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Status__c</fullName>
    <description>The status of the related PO.</description>
    <formula>TEXT(tc9_util__Purchase_Order__r.tc9_util__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of the related PO.</inlineHelpText>
    <label>PO Status</label>
    <type>Text</type>
</CustomField>