force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/validationRules/tc9_util__Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>tc9_util__Date_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(
tc9_util__Junction_Effective_Date__c &lt; tc9_util__Effective_Date__c, 
AND(isnull(tc9_util__Junction_Expiry_Date__c),NOT(isnull(tc9_util__Expiry_Date__c))),
tc9_util__Junction_Expiry_Date__c &gt; tc9_util__Expiry_Date__c), tc9_util__Overide_Validation__c = false, NOT(ischanged(tc9_util__Overide_Validation__c)))</errorConditionFormula>
    <errorMessage>Please check your dates are within the PO dates</errorMessage>
</ValidationRule>