force-app/main/default/objects/tc9_util__Purchase_Order_Junction__c/listViews/tc9_util__All.listView-meta.xml
<ListView>
    <fullName>tc9_util__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>